--- a/src/main/resources/templates/admin/generate_credentials.html
+++ b/src/main/resources/templates/admin/generate_credentials.html
@@ -57,6 +57,8 @@
             </div>
         </div>
     </section>
+    <div th:replace="fragments/footerFragment :: footer"></div>
+
 </main>
 </body>
 </html>
