--- a/src/main/resources/templates/admin/verification_detail.html
+++ b/src/main/resources/templates/admin/verification_detail.html
@@ -44,6 +44,7 @@
             </div>
         </div>
     </section>
+    <div th:replace="fragments/footerFragment :: footer"></div>
 </main>
 </body>
 </html>
