--- a/src/main/resources/templates/fragments/asideFragment.html
+++ b/src/main/resources/templates/fragments/asideFragment.html
@@ -60,8 +60,10 @@
                         class="bi bi-circle"></i><span>Approved Interns</span></a></li>
                 <li><a th:href="@{/bisag/admin/logs}"><i
                         class="bi bi-circle"></i><span>Rejected Interns</span></a></li>
+                <li><a th:href="@{/bisag/admin/group_selection}"><i
+                        class="bi bi-circle"></i><span>Confirmation Letter</span></a></li>
                 <li><a th:href="@{/bisag/admin/generate_credentials}">
-                    <i class="bi bi-circle"></i><span>Generate Credentials</span></a></li>
+                    <i class="bi bi-circle"></i><span>Generate/Forget Password</span></a></li>
                 <li><a th:href="@{/bisag/admin/add_fields}"><i
                         class="bi bi-circle"></i><span>Add Fields</span></a></li>
                 <li><a th:href="@{/bisag/admin/undertaking}"><i
@@ -95,7 +97,7 @@
             <ul class="sidebar-nav" id="guide-nav">
                 <li class="nav-item"><a class="nav-link collapsed"
                                         data-bs-target="#guide-components-nav" data-bs-toggle="collapse"
-                                        href="#"> <i class="bi bi-menu-button-wide"></i><span>Guide</span><i
+                                        href="#"> <i class="bi bi-menu-button-wide"></i><span>Guide Management</span><i
                         class="bi bi-chevron-down ms-auto"></i>
                 </a>
                     <ul id="guide-components-nav" class="nav-content collapse "
@@ -251,7 +253,7 @@
                 <li class="nav-item">
                     <a class="nav-link collapsed" data-bs-target="#records-nav" data-bs-toggle="collapse" href="#">
                         <i class="bi bi-menu-button-wide"></i>
-                        <span>Records</span>
+                        <span>Relieving Records</span>
                         <i class="bi bi-chevron-down ms-auto"></i>
                     </a>
                     <ul id="records-nav" class="nav-content collapse" data-bs-parent="#def-nav">
